# Token-Calculator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  PromptWorkbench.cmd  Prompt成本工作台.desktop  README.md  README.zh-CN.md  SECURITY.md  StopPromptWorkbench.cmd  docker-compose.yml  install_launcher.sh  install_windows_launcher.ps1  package.json  pyproject.toml  run.py  start.sh  stop.py  stop.sh  token-calculator.spec
.github/workflows/: ci.yml  release.yml
docs/: ARCHIVE.md  design-document.md  postmortem.md
docs/modules/: README.md
docs/modules/api-gateway/: README.md
docs/modules/compression-engine/: README.md
docs/modules/cost-simulator/: README.md
docs/modules/frontend-ui/: README.md
docs/modules/model-registry/: README.md
docs/modules/tokenizer-layer/: IMPLEMENTATION-PLAN.md  README.md
frontend/: index.html
frontend/css/: layout.css  style.css
frontend/js/: app.js
scripts/: download_tokenizers.py  package_standalone.py
src/token_calculator/: __init__.py  __main__.py  _app.py  _cli.py  _compressor_base.py  _cost_simulator.py  _llm_compressor.py  _models.py  _pricing.py  _quality_guard.py  _rule_compressor.py  _static.py  _tokenizer_base.py  _tokenizer_hf.py  _tokenizer_registry.py  _tokenizer_sentencepiece.py  _tokenizer_tiktoken.py
tests/: __init__.py  test_api.py  test_comprehensive.py  test_v3.py
tests/e2e/: README.md  e2e-test.mjs  live-test.mjs  v3-ui.mjs
