[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-calculator"
version = "2.0.0"
description = "Prompt optimization workstation -- token counting, compression, cost simulation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
server = ["uvicorn>=0.29"]
tokenizers = [
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "mistral-common>=1.4.0",
    "huggingface-hub>=0.24.0",
    "httpx>=0.27.0",
]
all = [
    "uvicorn>=0.29",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "mistral-common>=1.4.0",
    "huggingface-hub>=0.24.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/user/token-calculator"

[tool.setuptools.packages.find]
where = ["src"]
