[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-calculator"
version = "3.0.0"
description = "Archived prompt economics workbench for self-managed LLM API pipelines"
readme = "README.md"
license = "ISC"
license-files = ["LICENSE"]
authors = [{name = "fenglingshuishan"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<0.116",
    "tiktoken>=0.7.0",
    "httpx>=0.27,<0.28",
    "anyio>=4.4,<4.10",
    "uvicorn>=0.29,<0.35",
]
keywords = ["llm", "tokens", "prompt", "cost", "fastapi"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
token-calculator = "token_calculator._cli:main"
prompt-workbench = "token_calculator._cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
tokenizers = [
    "transformers>=4.48,<6",
    "tokenizers>=0.21",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.28",
]
build = ["build>=1.2", "pyinstaller>=6.0"]
all = [
    "transformers>=4.48,<6",
    "tokenizers>=0.21",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.28",
]

[project.urls]
Homepage = "https://github.com/fenglingshuishan/Token-Calculator"
Documentation = "https://github.com/fenglingshuishan/Token-Calculator#readme"
Repository = "https://github.com/fenglingshuishan/Token-Calculator.git"
Issues = "https://github.com/fenglingshuishan/Token-Calculator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/token-calculator/frontend" = ["frontend/index.html"]
"share/token-calculator/frontend/css" = ["frontend/css/*.css"]
"share/token-calculator/frontend/js" = ["frontend/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
